web server , window

--- a/pyworks/server/web/templates/calc_result.html
+++ b/pyworks/server/web/templates/calc_result.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>결과</title>
 </head>
-
 <body>
     <header>
-
         <nav>
             <a href="/">Home</a>
             <a href="/season">계절(season)</a>
@@ -15,13 +13,9 @@
             <a href="/calc">짝수/홀수 판정</a>
         </nav>
     </header>
-    <main>
-        <div>
-            <h2>codingON 방문을 환영합니다.</h2>
-        </div>
-        <div>
-            <img src="../static/paraglider.jpg" alt="패러글라이딩">
-        </div>
-    </main>
+    <section>
+        <h2>짝수/홀수 판정 결과</h2>
+        <h3>{{ result }}</h3>
+    </section>
 </body>
 </html>
